recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:26: error: not found: value lenght
    squareSide(levels-1,lenght/3)
                        ^